# noisy_labels

./: .gitignore  .gitmodules  README.md  README_eng.md  baseline.ipynb  justfile  main.py  prova.ipynb  pyproject.toml  requirements.txt  results.json
aggregator/: Cargo.toml
aggregator/src/: main.rs
checkpoints/A/: metadata.json  model_A_cycle_10_epoch_4.pth  model_A_cycle_10_epoch_4_optimizer.pth  model_A_cycle_1_epoch_32.pth  model_A_cycle_1_epoch_32_optimizer.pth  model_A_cycle_2_epoch_13.pth  model_A_cycle_2_epoch_13_optimizer.pth  model_A_cycle_3_epoch_18.pth  model_A_cycle_3_epoch_18_optimizer.pth  model_A_cycle_4_epoch_43.pth  model_A_cycle_4_epoch_43_optimizer.pth  model_A_cycle_5_epoch_5.pth  model_A_cycle_5_epoch_5_optimizer.pth  model_A_cycle_6_epoch_74.pth  model_A_cycle_6_epoch_74_optimizer.pth  model_A_cycle_7_epoch_66.pth  model_A_cycle_7_epoch_66_optimizer.pth  model_A_cycle_8_epoch_72.pth  model_A_cycle_8_epoch_72_optimizer.pth  model_A_cycle_9_epoch_24.pth  model_A_cycle_9_epoch_24_optimizer.pth  model_A_epoch_1.pth  model_A_epoch_12.pth  model_A_epoch_18.pth  model_A_epoch_2.pth  model_A_epoch_20.pth  model_A_epoch_24.pth  model_A_epoch_27.pth  model_A_epoch_3.pth  model_A_epoch_30.pth  (+18 more)
hackaton/: assignment.ipynb  baseline.ipynb  baseline_updated.ipynb  best_20.csv  bootstrap.ipynb  data_mining.ipynb  data_visualization.ipynb  hyperparameter_optimization copy.ipynb  hyperparameter_optimization.ipynb  solution copy.ipynb  solution.ipynb  trainer.ipynb
submission/: testset_A.csv  testset_ABCD.csv  testset_B.csv  testset_C.csv  testset_D.csv
(+210 files in other folders)
