[project]
name = "noisy-labels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haislich", email = "josedlv936@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
]

[project.scripts]
noisy-labels = "noisy_labels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
