[project]
name = "noisy-labels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "haislich", email = "josedlv936@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]

[project.scripts]
noisy-labels = "noisy_labels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
